# kube1s

./: .README.md.swp  .index.html.swp  .pdm-python  Dockerfile  README.md  curl_loop.sh  docker-compose.yml  docker_stats_20241031022420.csv  docker_stats_20241106113917.csv  docker_stats_20241106113929.csv  docker_stats_20241106113940.csv  docker_stats_20241106114054.csv  docker_stats_20241106114749.csv  docker_stats_20241106120524.csv  docker_stats_20241106120536.csv  docker_stats_20241106120548.csv  docker_stats_20241106120600.csv  docker_stats_20241106120613.csv  docker_stats_20241106120626.csv  docker_stats_20241106120638.csv  docker_stats_20241106120650.csv  docker_stats_20241106120707.csv  docker_stats_20241106120721.csv  docker_stats_20241106120734.csv  docker_stats_20241106120749.csv  docker_stats_20241106120803.csv  docker_stats_20241106120818.csv  docker_stats_20241106120837.csv  docker_stats_20241106120853.csv  docker_stats_20241106120910.csv  docker_stats_20241106120926.csv  docker_stats_20241106120943.csv  docker_stats_20241106120959.csv  docker_stats_20241106121013.csv  docker_stats_20241106121025.csv  docker_stats_20241106121037.csv  docker_stats_20241106121049.csv  docker_stats_20241106121100.csv  docker_stats_20241106121112.csv  docker_stats_20241106121124.csv  (+186 more)
docker/httpd/: Dockerfile
docker/nginx/: Dockerfile  default.conf
src/kube1s/: scale.py
