[project]
name = "kube1s"
version = "0.5.6"
description = "Default template for PDM package"
authors = [
    {name = "hahahellooo", email = "hahahello777@gmail.com"},
]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true

[project.scripts]
auto-scaler="kube1s.scale:auto_controll"

[project.urls]
Hompage = "https://github.com/hahahellooo/kube1s"
Issues = "https://github.com/hahahellooo/kube1s/issues"

